Fix BDF font-size matching.

This actually works around a bug in font config that always seems to
consider 10pt the primary match for sizes above 12, but skipping over
this primary match does lead to the font not being considered for
fallback.

BUG:472791